tests/vm/callTypeErr.test.out
-------------------------------------------------------------------------------
Type Error:

Cannot call type 'PtlsNumber'
-------------------------------------------------------------------------------

At (line 2) (column 13) in 'tests/vm/callTypeErr.test'
output = 123(3) |> println
            ^
